db_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
             claimName: db-pvc
      containers:
        - name: db
          image: postgres
          ports:
            - containerPort: 5432
              name: db-svc
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
